--- a/.github/workflows/new_prs.yml
+++ b/.github/workflows/new_prs.yml
@@ -13,7 +13,8 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Sync PRs to Jira project
-        uses: espressif/github-actions/sync_issues_to_jira@fix/jira-sync-pr
+        # uses: espressif/github-actions/sync_issues_to_jira@fix/jira-sync-pr
+        uses: espressif/github-actions/sync_issues_to_jira@master
         with:
           cron_job: true
         env:
