--- a/.github/workflows/new_prs.yml
+++ b/.github/workflows/new_prs.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@master
       - name: Sync PRs to Jira project
         # uses: espressif/github-actions/sync_issues_to_jira@fix/jira-sync-pr
-        uses: espressif/github-actions/sync_issues_to_jira@master
+        uses: espressif/github-actions/sync_issues_to_jira@update/jira-uses-pat
         with:
           cron_job: true
         env:
