--- a/.github/workflows/dangerjs.yml
+++ b/.github/workflows/dangerjs.yml
@@ -1,23 +1,31 @@
-# name: DangerJS Check
-# on:
-#   pull_request_target:
-#     types: [opened, edited, reopened, synchronize]
+name: DangerJS Check
+on:
+  pull_request_target:
+    types: [opened, edited, reopened, synchronize]
+  pull_request:
+    types: [opened, edited, reopened, synchronize]
 
 # permissions:
 #   pull-requests: write
 #   contents: write
 
-# jobs:
-#   pull-request-style-linter:
-#     runs-on: ubuntu-latest
-#     steps:
-#     - name: Check out PR head
-#       uses: actions/checkout@v3
-#       with:
-#         ref: ${{ github.event.pull_request.head.sha }}
+jobs:
+  pull-request-style-linter:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Check out PR head
+      uses: actions/checkout@v3
+      with:
+        ref: ${{ github.event.pull_request.head.sha }}
 
-
-#     - name: DangerJS pull request linter
-#       uses: espressif/github-actions/danger_pr_review@master
-#       env:
-#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: DangerJS pull request linter
+      uses: espressif/shared-github-dangerjs@add/danger-rules
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        # max-commits-enabled: 'false'
+        max-commits-info: 3
+        max-commits-warn: 6
+        instructions-contributions-guide-file: 'CONTRIBUTING.md'
+        instructions-cla-link: 'https://cla-assistant.io/espressif/test'
+        instructions-is-gitlab-mirror: 'true'
