--- a/.github/workflows/dangerjs.yml
+++ b/.github/workflows/dangerjs.yml
@@ -19,14 +19,14 @@ jobs:
         ref: ${{ github.event.pull_request.head.sha }}
 
     - name: DangerJS pull request linter
-      uses: espressif/shared-github-dangerjs@add/danger-rules
+      uses: espressif/shared-github-dangerjs@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        # max-commits-enabled: 'false'
-        max-commits-info: 3
-        max-commits-warn: 6
-        instructions-contributions-file: 'CONTRIBUTING.md'
-        instructions-cla-link: 'https://cla-assistant.io/espressif/test'
-        instructions-gitlab-mirror: 'true'
+      # with:
+      #   # max-commits-enabled: 'false'
+      #   max-commits-info: 3
+      #   max-commits-warn: 6
+        # instructions-contributions-file: 'CONTRIBUTING.md'
+      #   instructions-cla-link: 'https://cla-assistant.io/espressif/test'
+      #   instructions-gitlab-mirror: 'true'
 
