--- a/.github/workflows/new_prs.yml
+++ b/.github/workflows/new_prs.yml
@@ -4,7 +4,7 @@ name: Sync remain PRs to Jira
 # Note that, PRs can also get synced when new PR comment is created
 on:
   schedule:
-    - cron: "0 * * * *"
+    - cron: "0/5 * * * *"
 
 jobs:
   sync_prs_to_jira:
