--- a/.github/workflows/new_prs.yml
+++ b/.github/workflows/new_prs.yml
@@ -13,8 +13,8 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Sync PRs to Jira project
-        # uses: espressif/github-actions/sync_issues_to_jira@fix/jira-sync-pr
-        uses: espressif/sync-jira-actions@refactor/single-repo
+        # uses: espressif/sync-jira-actions@v1
+        uses: espressif/github-actions/sync_issues_to_jira@deprecate/jira-sync-action
         with:
           cron_job: true
         env:
