--- a/.github/workflows/new_issues_docker.yml
+++ b/.github/workflows/new_issues_docker.yml
@@ -1,4 +1,4 @@
-name: Sync issues to Jira (legacy caller)
+name: Sync issues to Jira (Docker; current v1)
 
 # This workflow will be triggered when a new issue is opened
 on: issues
@@ -10,8 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Sync GitHub issues to Jira project
-        # uses: espressif/sync-jira-actions@v1
-        uses: espressif/sync-jira-actions@change/composite-action
+        uses: espressif/sync-jira-actions@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           JIRA_PASS: ${{ secrets.JIRA_PASS }}
