--- a/.github/workflows/new_prs-docker.yml
+++ b/.github/workflows/new_prs-docker.yml
@@ -1,5 +1,4 @@
-name: Sync remain PRs to Jira (legacy caller)
-
+name: Sync remain PRs to Jira (Docker; current v1)
 # This workflow will be triggered every hour, to sync remaining PRs (i.e. PRs with zero comment) to Jira project
 # Note that, PRs can also get synced when new PR comment is created
 on:
@@ -13,8 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Sync PRs to Jira project
-        # uses: espressif/sync-jira-actions@v1
-        uses: espressif/sync-jira-actions@change/composite-action
+        uses: espressif/sync-jira-actions@v1
         with:
           cron_job: true
         env:
