--- a/.github/workflows/dangerjs.yml
+++ b/.github/workflows/dangerjs.yml
@@ -2,7 +2,7 @@
 name: 🎓 DangerJS Pull Request linter
 
 on:
-  pull_request_target: {types: [opened, edited, reopened, synchronize]}
+  pull_request: {types: [opened, edited, reopened, synchronize]}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -14,12 +14,9 @@ jobs:
     permissions:
       pull-requests: write
       contents: write
-    if: ${{ !contains(github.event.pull_request.title, '[skip ci]') }}
     steps:
       - name: Check out PR head
         uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: DangerJS pull request linter
         uses: espressif/shared-github-dangerjs@v1
