--- a/.github/workflows/sync-jira.yml
+++ b/.github/workflows/sync-jira.yml
@@ -44,7 +44,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           JIRA_PASS: ${{ secrets.JIRA_PASS }}
-          JIRA_PROJECT: IDFSYNTEST
-          JIRA_COMPONENT: GitHub
+          JIRA_PROJECT: ${{ vars.JIRA_PROJECT || 'IDFSYNTEST' }}
+          JIRA_COMPONENT: ${{ vars.JIRA_COMPONENT || 'GitHub' }}
           JIRA_URL: ${{ secrets.JIRA_URL }}
           JIRA_USER: ${{ secrets.JIRA_USER }}
